--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.0",
     "bootstrap": "^5.3.3",
     "react-dom": "^18.3.1",
     "react-qr-code": "^2.0.15",
+    "tailwindcss": "^4.0.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
