--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@tailwindcss/vite": "^4.0.0",
     "bootstrap": "^5.3.3",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-qr-code": "^2.0.15",
     "tailwindcss": "^4.0.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
